# speech_engine

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: code-quality.yaml  python-app.yaml
speech_engine/: __init__.py  audioPlayer.py  exceptions.py  tts.py  tts_deepgram.py  tts_elevenlabs.py  tts_google.py  tts_openai.py  tts_playai.py  tts_witai.py
